--- a/mbtc_visual_recognition/pubspec.yaml
+++ b/mbtc_visual_recognition/pubspec.yaml
@@ -23,8 +23,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  path:
+  http: ^0.12.0+4
   camera: ^0.5.8+11
   path_provider: ^1.6.24
+
+  rxdart: ^0.23.1
+
+  mobx: ^1.2.1+4
+  flutter_mobx: ^1.1.0+2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -33,6 +40,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  mobx_codegen: ^1.1.2
+  build_runner: ^1.7.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -48,6 +58,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
